minikube/networking/sol25/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: traefik
  listeners:
    - hostname: web.example.com
      name: http
      protocol: HTTP
      port: 80
