minikube/networking/sol25/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - web.example.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /web
      backendRefs:
      - name: web-v1
        port: 80
        weight: 80
      - name: web-v2
        port: 80
        weight: 20
